# investment

./: .env.example  .gitignore  CLAUDE.md  README.md  individual_stocks_execution_history.csv  momentum_df.csv  pyproject.toml  returns.csv  sector_momentum_execution_history.csv  sector_momentum_raw.csv
.devcontainer/: Dockerfile  devcontainer.json
Investment/: ClosePosition.ipynb  DailyTradingChecks.ipynb  GetPositionbySymbol.ipynb  LongTermInvetmentAnalysis.ipynb  Notes.txt  OpenPosition.ipynb  Untitled.ipynb  backtest_results_ijr.csv  backtest_results_ijr_schd.csv  commands  export.csv  final_investment.csv  results.csv
Investment/MomentumRider/: MomentumDriver.py  config.yaml  momentum_rider.csv  momentum_rider.py  momentum_rider_raw.csv  returns.csv
Investment/artifacts/: Strategies.md  resources.md
Investment/common/calculations/: __init__.py
Investment/common/data_retreival/: __init__.py
Investment/common/journal/: __init__.py
Investment/common/plotting/: __init__.py
Investment/journals/: Investment 091824.xlsx  final_investment.csv
Investment/notebooks/: Untitled.ipynb
Investment/playground/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  file.csv
Investment/strategies/: execute_strategy.py  individual_stocks_execution_history.csv  individual_stocks_raw.csv  momentum_df.csv  momentum_driver_execution_history.csv  momentum_rider_raw.csv  returns.csv  sector_momentum_execution_history.csv  sector_momentum_raw.csv
docs/: strategy-guide.md
src/investment/: __init__.py  logging.py
tests/: conftest.py
tests/unit/: test_package.py  test_short_term_momentum.py
(+23 files in other folders)
