[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investment"
version = "0.1.0"
description = "Investment analysis and portfolio management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "scipy>=1.11",
    "ta>=0.11",
    "yfinance>=0.2",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/investment"]
artifacts = ["src/investment/config/*.yaml"]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pip-audit>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "ANN", # flake8-annotations
    "S",   # flake8-bandit (security)
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # assert is valid in pytest tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/investment --cov-report=term-missing --cov-branch --cov-fail-under=80"

[tool.coverage.run]
source = ["src/investment"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
